SF Primes/src/objects/ALL_Approval_Process__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>Identifier__c</fullName>
        <label>Identifier</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Record_Type__c</fullName>
        <label>Record Type</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sObject__c</fullName>
        <label>sObject</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>ALL Approval Process</label>
</CustomObject>